# ExifWatermark

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakelists.txt  README.md  main.cpp  run.sh
include/MyProject/: GlobalConfig.hpp
install/assets/logo/Camera-Logos-SVG/: LICENSE.md  README.md
src/: AddExifCImg.cpp  AddExifOpencv.cpp  GeoCoordToLocal.cpp  headfile.hpp
src/AddExif/: AddExifCImg.cpp  AddExifCImg.hpp  AddExifOpencv.cpp  AddExifOpencv.hpp  CMakeLists.txt
src/Baidu/: BaiduReverseGeocode.cpp  BaiduReverseGeocode.hpp  CMakeLists.txt
src/ReadExif/: CMakeLists.txt  ReadExif.cpp  ReadExif.hpp
src/app/: CMakeLists.txt  main.cpp
src/args/: CMakeLists.txt  args.cpp  args.hpp
tests/: CMakeLists.txt  TestReadExif.cpp
